2013-03-15  Miguel Ángel Arruga Vivas  <rosen644835@gmail.com>
            Daiki Ueno  <ueno@gnu.org>

	Extract msgctxt from Glade input files.
	Reported at <https://savannah.gnu.org/bugs/?34506>
	* x-glade.c (struct element_state): Add field 'extract_context'.
	(start_element_handler): Check "context" attribute if the string
	contains msgctxt.
	(end_element_handler): Extract msgctxt if extract_context is set.

2013-02-25  Daiki Ueno  <ueno@gnu.org>

	* Makefile.am (libgettextsrc_la_CPPFLAGS): Define to specify Woe32
	DLL export flags.

2013-01-09  Andreas Stricker  <astricker@futurelab.ch>  (tiny change)

	* po-xerror.c: Include error.h for error_message_count.
	* read-catalog-abstract.c: Likewise.

2013-01-06  Daiki Ueno  <ueno@gnu.org>

	* msgl-fsearch.c (message_fuzzy_index_ty): Don't use float-derived
	integer SHORT_MSG_MAX to define array.
	(message_fuzzy_index_alloc): Allocate memory for 'short_messages'
	field dynamically.
	(message_fuzzy_index_free): Free it.

2013-01-03  Daiki Ueno  <ueno@gnu.org>

	* xgettext.c (construct_header): Fix memory leak.

2012-12-25  Daiki Ueno  <ueno@gnu.org>

	* gettext-0.18.2 released.

2012-06-03  Jim Meyering  <jim@meyering.net>

	* msginit.c: Spelling fixes.
	* write-catalog.c: Likewise.

2012-05-03  Bruno Haible  <bruno@clisp.org>

	Document msgfmt option --endianness.
	* msgfmt.c (usage): Document the option --endianness.
	Reported by Paul Martin <pm@debian.org> via
	Santiago Vila <sanvila@unex.es>.

2012-01-26  Bruno Haible  <bruno@clisp.org>

	Modernize quoting.
	* hostname.c (usage): Quote 'like this', not `like this', as per the
	recent change to the GNU coding standards.
	* msgattrib.c (usage): Likewise.
	* msgcat.c (usage): Likewise.
	* msgcmp.c (usage): Likewise.
	* msgcomm.c (usage): Likewise.
	* msgconv.c (usage): Likewise.
	* msgen.c (usage): Likewise.
	* msgexec.c (usage): Likewise.
	* msgfilter.c (usage): Likewise.
	* msgfmt.c (usage, msgfmt_set_domain, msgfmt_frob_new_message):
	Likewise.